--- a/bench/ben_experiments/analysis/analysis.ipynb
+++ b/bench/ben_experiments/analysis/analysis.ipynb
@@ -28,23 +28,95 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lebrunb/genparse/bench/ben_experiments/analysis/utils.py:76: UserWarning: ../results/Meta-Llama-3.1-8B-Instruct/character/smc/Meta-Llama-3.1-8B-Instruct-smc-1-0.5-p10-character.jsonl : reading line 30 failed with Extra data: line 1 column 445235 (char 445234)\n",
-      "  warnings.warn(f\"{fp} : reading line {i} failed with {e}\")\n"
+      "/home/lebrunb/genparse/bench/ben_experiments/analysis/utils.py:95: UserWarning: ../results/Meta-Llama-3.1-8B-Instruct/character/smc/Meta-Llama-3.1-8B-Instruct-smc-1-0.7-p1-character.jsonl : could not find file\n",
+      "  warnings.warn(f'{fp} : could not find file')\n",
+      "/home/lebrunb/genparse/bench/ben_experiments/analysis/utils.py:95: UserWarning: ../results/Meta-Llama-3.1-8B-Instruct/character/smc/Meta-Llama-3.1-8B-Instruct-smc-1-0.9-p1-character.jsonl : could not find file\n",
+      "  warnings.warn(f'{fp} : could not find file')\n"
      ]
     }
    ],
    "source": [
-    "from utils import read_files, melt_and_add_confidence_intervals\n",
+    "from utils import read_files, spider_eval\n",
     "\n",
     "data = read_files(\n",
     "    results_dir = results_dir,\n",
     "    models=['Meta-Llama-3.1-8B-Instruct'], \n",
     "    methods=['smc'], \n",
     "    runs=[1], \n",
-    "    n_particles_list=[1,5,10], \n",
-    "    ess_thresholds=[0.5],\n",
+    "    n_particles_list=[1, 5, 10], \n",
+    "    ess_thresholds=[0.5, 0.7, 0.9],\n",
     "    proposals=['character']\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/7238 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 34%|███▍      | 2476/7238 [00:22<00:31, 152.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function cached_eval timed out after 10 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|███▌      | 2538/7238 [00:40<00:30, 152.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function cached_eval timed out after 10 seconds\n",
+      "Function cached_eval timed out after 10 seconds\n",
+      "Function cached_eval timed out after 10 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 78%|███████▊  | 5634/7238 [41:28<11:48,  2.26it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from evaluate import run_and_add_evaluation\n",
+    "\n",
+    "data = run_and_add_evaluation(data, n_workers=10, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "p = os.path.join(results_dir, 'Llama-3.1-8B-Instruct-smc-0.5,0.7,0.9-1,5,10-character.jsonl')\n",
+    "with open(p, 'w') as f:\n",
+    "    for l in data:\n",
+    "        print(json.dumps(l), file=f)"
    ]
   },
   {
@@ -54,14 +126,23 @@
    "outputs": [],
    "source": [
     "local_poe_data = read_files(\n",
-    "    results_dir = '../full_results',\n",
+    "    results_dir = results_dir,\n",
     "    models=['Meta-Llama-3.1-8B-Instruct'], \n",
     "    methods=['local'], \n",
     "    runs=[1], \n",
-    "    n_particles_list=[10], \n",
-    "    ess_thresholds=[None],\n",
+    "    n_particles_list=[1,5,10], \n",
+    "    ess_thresholds=[0.5], # ignored \n",
     "    proposals=['character']\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_poe_data = run_and_add_evaluation(local_poe_data, run_mbr=False, overwrite=True)"
    ]
   },
   {
@@ -1293,6 +1374,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util import melt_and_add_confidence_intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
    "outputs": [
@@ -1503,6 +1593,26 @@
     "          color='method'))\n",
     "\n",
     "p.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'▪'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from genparse import EOS; EOS"
    ]
   },
   {
