Cleaned up the tiny example jupyter file. Added a slightly more complicated sql example as sample code and jupyter file. Updated documentation to reflect the jupyter files and also separated out the visualization details into their own file with more details.

--- a/genparse_tiny_example.ipynb
+++ b/genparse_tiny_example.ipynb
@@ -20,7 +20,7 @@
    "id": "13e14d2b",
    "metadata": {},
    "source": [
-    "Reset the environment to clear all variables and imports."
+    "Reset the environment to clear all variables and imports. Note that Jupyter will display the results of the last run when you re-enter. Even if you've fixed the code, it will still display the old results."
    ]
   },
   {
@@ -279,41 +279,6 @@
     "# and set verbosity to 1 to print progress to the console\n",
     "inference_result = inference_setup(' ', n_particles=5, verbosity=1)\n",
     "print('Inference completed.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f84d66f2",
-   "metadata": {},
-   "source": [
-    "## Display Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "afe2eccf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Probabilities using the .posterior property:\n",
-      "Chart {\n",
-      "  'Sequential Monte Carlo is good▪': 0.6,\n",
-      "  'Sequential Monte Carlo is bad▪': 0.4,\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Display probabilities using the .posterior property\n",
-    "print('Probabilities using the .posterior property:')\n",
-    "posterior = inference_result.posterior\n",
-    "\n",
-    "# Display results\n",
-    "print(posterior)"
    ]
   }
  ],
